@@ -69,7 +69,7 @@ fi
 echo "Cleaning up..."
 cleanup
 echo "Running ${PYLINT_CMD}..."
-${PYLINT_CMD} --max-line-length=350 telluride.py server.py
+${PYLINT_CMD} --max-line-length=350 telluride.py
 read -p "[Press any key to continue] [Press Ctrl+C to cancel build]"
 echo "Running ${PYINSTALLER_CMD} --onefile ${EXTRA_FLAGS} telluride.py"
 ${PYINSTALLER_CMD} --onefile ${EXTRA_FLAGS} telluride.py
