@@ -1,3 +1,13 @@
+build 25 - feb/24/2023
+ - yt_dlp-2023.2.17
+ - Removed server mode
+ - dev: pip-23.0.1
+ - dev: astroid-2.14.2
+ - dev: pylint-2.16.2
+ - dev: pyinstaller-5.8.0
+ - dev: Removed Flask dependency
+ - dev: Removed Wekzeug (WSGI) dependency
+
 build 24 - jan/04/2023
  - yt_dlp-2023.1.2
  - python 3.11.1
